contact title update

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         <div class="row">
           <div class="heading">
             <!-- Heading -->
-            <h2 class="contactHeader">Let's Work Together!</h2>
+            <h2 class="contactHeader">Let's Work Together</h2>
             <p class="contactBlurb">
               I'd love to hear about your next project! Please fill this form
               and I'll be in touch shortly.
